# titan

./: Cargo.toml  LICENSE
examples/: create.rs  half.rs
src/: blocking.rs  error.rs  lib.rs  nonblocking.rs
src/nonblocking/: half.rs
src/platform/: unix.rs
